[package]
name = "rando_engine"
version = "0.1.0"
authors = ["Jonathan Louie <jonathanrlouie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
petgraph = "0.5.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
linked_hash_set = "0.1.3"
bimap = "0.4.0"
thiserror = "1.0.19"
